# django_chat

./: .gitignore  LICENSE.txt  MANIFEST.in  Pipfile  README.md  requirements.txt  setup.cfg
example_project/example_project/: asgi.py  settings.py  urls.py
tests/: test_models.py  test_settings.py
tests/test_app/: admin.py  models.py
