[metadata]
name = django-chat
version = 0.1.0
description = App for django instant messaging. 
long_description = file: README.md, LICENSE.txt
url = https://github.com/genosltd/django-chat
author = Borna Rapcan
author_email = brapcan@genos.hr
clasifiers = 
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Framework :: Django
    Development Status :: 3 - Alpha

[options]
packages = find:
install_requires =
    django >= 3.1
python_requires = >=3.6, <4
